manifests/prodgradek8sapp/module-3-daemonset-advanced.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds1
  labels:
    app: pause
spec:
  selector:
    matchLabels:
      app: pause
  template:
    metadata:
      labels:
        app: pause
    spec:
      containers:
      - name: ds1
        image: gcr.io/google_containers/pause-amd64:3.0
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - <node1>
                - <node2>
