manifests/prodgradek8sapp/module-4-internal-dns-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh","-c","sleep 3600"]
