manifests/prodgradek8sapp/module-5-green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-v02
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample
      tier: frontend
      version: v.0.2
  template:
    metadata:
      labels:
        app: sample
        tier: frontend
        version: v.0.2
    spec:
      containers:
        - name: app-frontend
          image: containersol/sample-k8s-front:0.2
          ports:
            - containerPort: 9292
