manifests/prodgradek8sapp/module-5-recreate-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample
      tier: frontend
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: sample
        tier: frontend
    spec:
      containers:
        - name: app-frontend
          image: containersol/sample-k8s-front:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9292
