manifests/prodgradek8sapp/module-4-ing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - port: 80 # the port that this service should serve on
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
