manifests/prodgradek8sapp/module-5-bluegreen-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
spec:
  ports:
  - name: http
    port: 9292
    targetPort: 9292
  selector:
    app: sample
    tier: frontend
    version: v.0.1
