manifests/prodgradek8sapp/module-5-recreate-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
spec:
  ports:
  - name: http
    port: 9292
    targetPort: 9292
  selector:
    tier: frontend
    app: sample
