manifests/prodgradek8sapp/module-4-ing-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /mypath
        backend:
          serviceName: nginx-service
          servicePort: 80
