manifests/prodgradek8sapp/module-5-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mying
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /mypath
        backend:
          serviceName: sample-app-svc
          servicePort: 9292
